fix: scrollbar width

--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -7,7 +7,7 @@
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
+  width: 100vw;
   box-shadow: 0px -4px 20px 0px #0404150d;
   background-color: #ffffff;
 }
